--- a/5retrieval-module.tex
+++ b/5retrieval-module.tex
@@ -864,7 +864,7 @@ retrieval engine. The overall results shows that both Chamfer Distance and
 Dynamic Time Warping were candidate methods  as they have relatively good and
 similar performance in those 7 test cases. However, Chamfer Distance was able
 to return higher difference ratio between the best case and worst case test
-case. This attribute is extremely desireable and very useful when sorting huge
+case. This attribute is extremely desirable and very useful when sorting huge
 numbers of trajectories from the database.
 
 Even though the overall results using Chamfer Distance were relatively good,
@@ -915,16 +915,16 @@ GT Sample & \begin{tabular}[r]{@{}l@{}}Test 1:\\ Mirror\end{tabular} & \begin{ta
 \textbf{Euclidean Distance} & 0.1171 (5.00) & 0.1656 (7.07) & 0.1424 (6.08) & 0.0703 (3.00) & 0.0661 (2.82) & 0.3645 (15.56) & 0.0740 (3.16) \\ \hline
 \end{tabular}%
 }
-\caption{Comparison of Difference Distance Measures against 7 Different Test
-  Scenarios Against a Ground Truth Sample Data. The results are represented by
-  Normalised Results Followed by the Actual Distance Measure obtained in
-  Brackets. Smaller Numbers are Represents Closer Similarity. Euclidean Distance
-  acted as a simplistic approach towards this problem, and was used as a
+\caption{Comparison of 5 distance measures against 7 different test
+  scenarios against a ground truth sample data. The results are represented by
+  normalised results followed by the actual distance measure obtained (in
+  brackets). Smaller numbers represents closer similarity. Euclidean distance
+  acts as a simplistic approach towards this problem, and was used as a
   baseline comparison. The results shows that Earth Mover Distance favoured
   cases where the shapes were similar (Test 7) and penalised a mirrored shape
   (Test 1). Hausdorff distance failed to provide good dissimilarity score for
-  Test 2 which was used to test the ability to differentiate directions.
-  Overall, Chamfer Distance and Dynamic Time Warping method was able to provide
+  test 2 which was used to test the ability to differentiate directions.
+  overall, Chamfer Distance and Dynamic Time Warping method was able to provide
   comparable results, however, Chamfer Distance came up top as it is able to
   provide a larger margin between the best and worst test cases. This property
   is desirable when comparing huge numbers of trajectories.}
