--- a/2literature-review.tex
+++ b/2literature-review.tex
@@ -167,8 +167,8 @@ dependent,\\ Requires same length vectors\end{tabular} \\ \hline
  
 
 \subsection{Human Visual System}
-An interesting excerpt by \citeA{albers2006interaction} states that ``In order to use color effectively it is necessary to recognize that color deceives continually. To this end, the beginning is not a study of color systems.
-First, it should be learned that one and the same color evokes innumerable readings. Instead of mechanically applying or merely implying laws and rules of color harmony, distinct color effects are produced-through recognition of the interaction of color-by making, for instance, two very different colors look alike, or nearly alike''. Hence, the human visual system is first explored to understand how to use colors effectively.
+An interesting excerpt by \citeA{albers2006interaction} states that ``In order to use colour effectively it is necessary to recognise that colour deceives continually. To this end, the beginning is not a study of colour systems.
+First, it should be learned that one and the same colour evokes innumerable readings. Instead of mechanically applying or merely implying laws and rules of colour harmony, distinct colour effects are produced-through recognition of the interaction of colour-by making, for instance, two very different colours look alike, or nearly alike''. Hence, the human visual system is first explored to understand how to use colours effectively.
 
 \label{section:eyes}
 The human eyes are visual biological organs responsible of receiving and
